objects/Partner_Discount_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Level__c</fullName>
        <label>Partner Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SmartBytes NA Reseller Silver</fullName>
                </value>
                <value>
                    <fullName>SmartBytes NA Reseller Gold</fullName>
                </value>
                <value>
                    <fullName>SmartBytes NA Reseller Platinum</fullName>
                </value>
                <value>
                    <fullName>SmartBytes NA Distributor Silver</fullName>
                </value>
                <value>
                    <fullName>SmartBytes NA Distributor Gold</fullName>
                </value>
                <value>
                    <fullName>SmartBytes NA Distributor Platinum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Subscription Device</fullName>
                </value>
                <value>
                    <fullName>Consumable</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner Discount Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Partner_Type__c</columns>
        <columns>Partner_Level__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Discount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Discount Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>